apis/extractor/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: extractor-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: extractor-1
  template:
    metadata:
      labels:
        app: extractor-1
    spec:
      containers:
        - name: extractor
          image: extractor
          ports:
          - containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: extractor-56
spec:
  replicas: 1
  selector:
    matchLabels:
      app: extractor-56
  template:
    metadata:
      labels:
        app: extractor-56
    spec:
      containers:
        - name: extractor
          image: extractor
          ports:
          - containerPort: 8081
          readinessProbe:
            tcpSocket:
              port: 8081
            initialDelaySeconds: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
          - name: config-vol
            mountPath: /etc/nginx/
      volumes:
        - name: config-vol
          configMap:
            name: nginx-config
            items:
              - key: nginx.conf
                path: nginx.conf
