apis/extractor/k8s/extractor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: extractor-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: extractor-1
  template:
    metadata:
      labels:
        app: extractor-1
    spec:
      containers:
        - name: extractor
          image: extractor:latest
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: extractor-default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: extractor-default
  template:
    metadata:
      labels:
        app: extractor-default
    spec:
      containers:
        - name: extractor
          image: extractor:latest
          ports:
            - containerPort: 8080
