apis/extractor/k8s/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2 
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
          - containerPort: 80
        readinessProbe:
          httpGet: 
            path: /health
            port: 80
        livenessProbe:
          exec:
            command:
            - ls
        volumeMounts:
          - name: nginx-volume
            mountPath: /etc/nginx/
      volumes:
        - name: nginx-volume
          configMap:
            name: nginx-config
            items:
              - key: nginx.conf
                path: nginx.conf
