apis/extractor/k8s/extractor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: extractor-default-service
spec:
  selector:
    app: extractor-default
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: extractor-1-service
spec:
  selector:
    app: extractor-1
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: extractor-137-service
spec:
  selector:
    app: extractor-137
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: extractor-56-service
spec:
  selector:
    app: extractor-56
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 3003
