apis/extractor/k8s/ingress-development.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: extractor-ingress
  annotations:
    kubernetes.io/ingressClassName: "gce"
    kubernetes.io/ingress.global-static-ip-name: "extractor-development"
    networking.gke.io/managed-certificates: "managed-certificate-development"
spec:
  rules:
  - http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
