apis/extractor/k8s/ingress-production.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: extractor-production-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "extractor-production-ip"
    networking.gke.io/managed-certificates: "extractor-production-managed-certificate"
spec:
  rules:
  - http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
